# digikam-vkontakte

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  vkalbumchooser.cpp  vkalbumchooser.h  vkauthwidget.cpp  vkauthwidget.h  vknewalbumdlg.cpp  vknewalbumdlg.h  vkplugin.cpp  vkplugin.h  vkwindow.cpp  vkwindow.h
src/backend/: vkontakte_albuminfo.cpp  vkontakte_albuminfo.h  vkontakte_albumlistjob.cpp  vkontakte_albumlistjob.h  vkontakte_apppermissions.h  vkontakte_authenticationdialog.cpp  vkontakte_authenticationdialog.h  vkontakte_createalbumjob.cpp  vkontakte_createalbumjob.h  vkontakte_deletealbumjob.cpp  vkontakte_deletealbumjob.h  vkontakte_editalbumjob.cpp  vkontakte_editalbumjob.h  vkontakte_getapplicationpermissionsjob.cpp  vkontakte_getapplicationpermissionsjob.h  vkontakte_getphotouploadserverjob.cpp  vkontakte_getphotouploadserverjob.h  vkontakte_jobs.cpp  vkontakte_jobs.h  vkontakte_photoinfo.cpp  vkontakte_photoinfo.h  vkontakte_photojob.cpp  vkontakte_photojob.h  vkontakte_photolistjob.cpp  vkontakte_photolistjob.h  vkontakte_photopostjob.cpp  vkontakte_photopostjob.h  vkontakte_savephotojob.cpp  vkontakte_savephotojob.h  vkontakte_uploadphotosjob.cpp  vkontakte_uploadphotosjob.h  vkontakte_userinfo.cpp  vkontakte_userinfo.h  vkontakte_userinfojob.cpp  vkontakte_userinfojob.h  vkontakte_util.cpp  vkontakte_util.h  vkontakte_vkapi.cpp  vkontakte_vkapi.h
src/backend/attic/: vkontakte_allmessageslistjob.cpp  vkontakte_allmessageslistjob.h  vkontakte_allnoteslistjob.cpp  vkontakte_allnoteslistjob.h  vkontakte_cidsnamesjob.cpp  vkontakte_cidsnamesjob.h  vkontakte_discussionslistjob.cpp  vkontakte_discussionslistjob.h  vkontakte_friendlistjob.cpp  vkontakte_friendlistjob.h  vkontakte_groupinfo.cpp  vkontakte_groupinfo.h  vkontakte_messageinfo.cpp  vkontakte_messageinfo.h  vkontakte_messageslistjob.cpp  vkontakte_messageslistjob.h  vkontakte_noteaddjob.cpp  vkontakte_noteaddjob.h  vkontakte_noteinfo.cpp  vkontakte_noteinfo.h  vkontakte_notejob.cpp  vkontakte_notejob.h  vkontakte_noteslistjob.cpp  vkontakte_noteslistjob.h
src/backend/deprecated/: vkontakte_getinfojob.cpp  vkontakte_getinfojob.h  vkontakte_getvariablejob.cpp  vkontakte_getvariablejob.h  vkontakte_grouplistjob.cpp  vkontakte_grouplistjob.h
src/tests/: CMakeLists.txt  albums_utest.h  frequentrequests_utest.h  photos_utest.cpp  photos_utest.h  userinfo_utest.h  vktestbase.cpp
src/tests/attic/: database_utest.cpp  database_utest.h  friends_utest.cpp  loginproperties_utest.h  messages_utest.cpp  notes_utest.h
tests/: CMakeLists.txt  albums_utest.cpp  frequentrequests_utest.cpp  userinfo_utest.cpp  vktestbase.h
tests/attic/: friends_utest.h  loginproperties_utest.cpp  messages_utest.h  notes_utest.cpp
